修改一些过期的方法。